openafs (1.4.0+rc10-1) UNRELEASED; urgency=low

  * New upstream release (1.4.1-rc10).
    - Supports Linux 2.6.16.  (Closes: #358203)
    - Suspend should work with newer kernels.  (Closes: #341588)
    - Upstream now includes man pages, so remove our backport.
  * Subsume openafs-doc into this source package.
  * Always pass the system type into Autoconf, following autotools-dev
    best practices.

 -- Russ Allbery <rra@debian.org>  Tue, 28 Mar 2006 15:16:01 -0800

openafs (1.4.0-4) unstable; urgency=low

  * Hopefully fix sparc64 kernel support.  Thanks, Troy Benjegerdes.
    (Closes: #219429)
  * Document the need to restart ptserver and vlserver on the existing
    database servers when adding a new one.  Thanks, Niklas Edmundsson.
    (Closes: #349659)
  * Include xstat_cm_test and xstat_fs_test in openafs-client, as they're
    quite useful for debugging.

 -- Russ Allbery <rra@debian.org>  Tue, 14 Mar 2006 21:07:07 -0800

openafs (1.4.0-3) unstable; urgency=low

  * Apply upstream patch from Chas Williams to be more careful about what
    dentry is used in renames, avoiding a kernel fault when renaming
    dentries accessed through multiple paths (such as RO and RW).
  * Apply patch to allow the module to build with the Ubuntu kernel.
    Thanks, Björn Torkelsson.  (Closes: #342607)
  * Stop unconditionally forcing the compiler to cc or gcc in configure,
    allowing, among other things, building the kernel module with a
    compiler other than the default system compiler.  (Closes: #338306)
  * Call kernel-version correctly from prep-modules, which fixes build
    issues with manually-built kernels.  (Closes: #344851)
  * Backport man pages from upstream CVS.  (Closes: #79763)
  * Include afsmonitor and livesys in openafs-client.
  * Include volinfo in openafs-fileserver.
  * Document FAM's lack of support for AFS's security model and recommend
    gamin instead.  (Closes: #343246)
  * Add a hint to README.Debian on what to do about the cache partition if