@@ -92,6 +92,7 @@ configure-stamp:
 	    --sysconfdir=/etc --libexecdir=/usr/lib \
 	    --localstatedir=/var/lib --enable-supergroups \
 	    --enable-largefile-fileserver --enable-debug --enable-lwp-debug \
+	    --with-krb5-conf=/usr/bin/krb5-config \
 	    $(DEBIAN_OPT_FLAGS) $(SYSTEM)
 	chmod a+x src/libafs/make_kbuild_makefile.pl         
 	touch configure-stamp
